--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,10 @@ cmake_minimum_required(VERSION 3.14)
 #Create a new project
 project(MathUtils VERSION 1.0.0 
     #@@TODO replace below with your description
-    DESCRIPTION "MathUtils project"
+    DESCRIPTION "A simple CMake example project that computes the dot product of two vectors."
     LANGUAGES CXX
 )
+
 
 
 #=====Declare Targets=====
@@ -20,14 +21,8 @@ add_executable(MathUtils-bin)
 set_target_properties(MathUtils-bin PROPERTIES OUTPUT_NAME MathUtils)
 
 
+
 #=====Declare Dependencies=====
-#Make MathUtils-bin (our driver) depend on our library (MathUtils)
-target_link_libraries(MathUtils-bin PRIVATE MathUtils)
-
-#Set the include directory for this library. PUBLIC means this directory is propagated to any targets that link to it.
-target_include_directories(MathUtils PUBLIC include)
-
-
 #Fetch the fmt library
 include(FetchContent)
 message(STATUS "Fetching content: fmt")
@@ -39,8 +34,13 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(fmt)
 message(STATUS "fmt successfully fetched.")
 
-#Make it a dependency of the executable (the MathUtils-bin target, not MathUtils)
+#Make it a dependency of the executable, and the library.
 target_link_libraries(MathUtils-bin PRIVATE fmt)
+target_link_libraries(MathUtils PRIVATE fmt)
+
+#Make MathUtils-bin (our driver) depend on our library (MathUtils)
+target_link_libraries(MathUtils-bin PRIVATE MathUtils)
+
 
 
 #=====Tweak build settings=====
@@ -76,7 +76,7 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     endif()
 
     #If testing wasn't explictly set, enable building it.
-    if(NOT BUILD_TESTING)
+    if(NOT DEFINED BUILD_TESTING)
         message(STATUS "Enabling testing")
         set(BUILD_TESTING ON)
     endif()
@@ -95,12 +95,21 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     target_compile_options(MathUtils-bin PRIVATE ${compiler_warnings})
 endif()
 
+
+#Set the include directory for this library. PUBLIC means this directory is propagated to any targets that link to it.
+target_include_directories(MathUtils
+    PUBLIC include
+    PRIVATE src/MathUtils #Sometimes you will have utility headers that aren't public, and shouldn't be distributed. These go in the src/MathUtils/ directory
+)
+
 #Add source directory
 add_subdirectory(src)
 
-#If this project is being built, and the tests are requested:
+#If this project is being directly built, and the tests are requested:
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
     #Enable testing
+    #Append the `--output-on-failure` argument to the ctest command. This makes the tests show output when they fail.
+    list(APPEND CMAKE_CTEST_ARGUMENTS "--output-on-failure")
     include(CTest)
     add_subdirectory(tests)
 endif()
