--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -37,6 +37,7 @@ jobs:
         gstreamer1.0-pulseaudio
         gstreamer1.0-plugins-bad
         libboost-filesystem-dev
+        --fix-missing
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
