--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -17,29 +17,44 @@ jobs:
 
     - name: Install Cinder Dependencies
       run: >
-        sudo apt-get install
-        libxcursor-dev
-        libxrandr-dev
-        libxinerama-dev
-        libxi-dev
-        libgl1-mesa-dev
-        libglu1-mesa-dev
-        zlib1g-dev
-        libfontconfig1-dev
-        libmpg123-dev
-        libsndfile1
-        libsndfile1-dev
-        libpulse-dev
-        libasound2-dev
-        libcurl4-gnutls-dev
-        libgstreamer1.0-dev
-        libgstreamer-plugins-bad1.0-dev
-        libgstreamer-plugins-base1.0-dev
-        gstreamer1.0-libav
-        gstreamer1.0-alsa
-        gstreamer1.0-pulseaudio
-        gstreamer1.0-plugins-bad
-        libboost-filesystem-dev
+        sudo apt-get install -y
+          libxcursor-dev
+          libxrandr-dev
+          libxinerama-dev
+          libxi-dev
+          libgl1-mesa-dev
+          libgles2-mesa-dev
+          zlib1g-dev
+          libfontconfig1-dev
+          libsndfile1
+          libsndfile1-dev
+          libpulse-dev
+          libasound2-dev
+          libcurl4-gnutls-dev
+          libgstreamer1.0-dev
+          libgstreamer-plugins-bad1.0-dev
+          libgstreamer-plugins-base1.0-dev
+          gstreamer1.0-libav
+          gstreamer1.0-alsa
+          gstreamer1.0-pulseaudio
+          gstreamer1.0-plugins-bad
+          libboost-filesystem-dev
+          libmpg123-dev
+
+
+    - name: Cache Cinder
+      id: cache-cinder
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/Cinder
+        key: ${{ runner.os }}-cinder-v0.9.2
+
+    - name: Clone & Build Cinder
+      if: steps.cache-cinder.outputs.cache-hit != 'true'
+      working-directory: ~/.cache
+      run: git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
+      run: cmake -S Cinder -B Cinder/build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
+      run: cmake --build Cinder/build
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
