--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -52,9 +52,10 @@ jobs:
     - name: Clone & Build Cinder
       if: steps.cache-cinder.outputs.cache-hit != 'true'
       working-directory: ~/.cache
-      run: git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
-      run: cmake -S Cinder -B Cinder/build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
-      run: cmake --build Cinder/build
+      run: |
+        git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
+        cmake -S Cinder -B Cinder/build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
+        cmake --build Cinder/build
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
