--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -50,12 +50,13 @@ jobs:
         key: ${{ runner.os }}-cinder-v0.9.2
 
     - name: Clone & Build Cinder
-      if: steps.cache-cinder.outputs.cache-hit != 'true'
-      working-directory: ~/.cache
+      #if: steps.cache-cinder.outputs.cache-hit != 'true'
+      working-directory: ~/
       run: |
         git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
-        cmake -S Cinder -B Cinder/build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
-        cmake --build Cinder/build
+        cd Cinder
+        cmake -S Cinder -B build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
+        cmake --build build
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
