--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -41,11 +41,6 @@ jobs:
         libboost-filesystem-dev
         libmpg123-dev
 
-    - name: ls
-      run: |
-        pwd
-        ls -la
-
     - name: Cache Cinder
       id: cache-cinder
       uses: actions/cache@v2
@@ -55,9 +50,11 @@ jobs:
 
     - name: Clone & Build Cinder
       #if: steps.cache-cinder.outputs.cache-hit != 'true'
-      working-directory: ~/cache
       run: |
         pwd
+        ls -la
+        mkdir -p ~/cache
+        cd ~/cache
         ls -la
         git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
         ls -la
