--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -56,7 +56,7 @@ jobs:
         mkdir -p ~/cache
         cd ~/cache
         ls -la
-        git clone --recursive --depth 1 --branch v0.9.2 git@github.com:cinder/Cinder.git
+        git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
         ls -la
         cd Cinder
         cmake -S Cinder -B build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
