Tweaks to cache

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,14 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2 # Clone repo
 
-    - name: ls1
-      run: ls /var/cache/apt/archives/ | wc -l
-
     - name: Update Archives
       run: sudo apt-get update
-
-    - name: ls2
-      run: ls /var/cache/apt/archives/ | wc -l
 
     - name: Install Cinder Dependencies
       run: >
@@ -47,9 +41,6 @@ jobs:
         libboost-filesystem-dev
         libmpg123-dev
 
-    - name: ls3
-      run: ls /var/cache/apt/archives/ | wc -l
-
     - name: Cache Cinder
       id: cache-cinder
       uses: actions/cache@v2
@@ -58,7 +49,7 @@ jobs:
         key: ${{ runner.os }}-cinder-v0.9.2
 
     - name: Clone & Build Cinder
-      #if: steps.cache-cinder.outputs.cache-hit != 'true'
+      if: steps.cache-cinder.outputs.cache-hit != 'true'
       run: |
         mkdir -p ~/cache/${{ runner.os }}
         cd  ~/cache/${{ runner.os }}
