--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,6 +12,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2 # Clone repo
 
+    - name: Cache Cinder
+      id: cache-cinder
+      uses: actions/cache@v2
+      with:
+        path: ~/cache/${{ runner.os }}/Cinder
+        key: ${{ runner.os }}-cinder-v0.9.2
+
+    - name: Clone & Build Cinder
+      #if: steps.cache-cinder.outputs.cache-hit != 'true'
+      run: |
+        mkdir -p ~/cache/${{ runner.os }}
+        cd  ~/cache/${{ runner.os }}
+        git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
+        cd Cinder
+        cmake -B build -DCMAKE_RELEASE_TYPE=RelWithDebInfo
+        cmake --build build
+
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }}
