--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,6 +12,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2 # Clone repo
 
+    - name: Cache Cinder
+      id: cache-cinder
+      uses: actions/cache@v2
+      with:
+        path: ~/cache/${{ runner.os }}/Cinder
+        key: ${{ runner.os }}-cinder-v0.9.2
+
+    - name: Clone & Build Cinder
+      #if: steps.cache-cinder.outputs.cache-hit != 'true'
+      run: |
+        mkdir ~/cache/${{ runner.os }} -ea 0
+        cd  ~/cache/${{ runner.os }}
+        git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
+        cd Cinder
+        cmake -B build
+        cmake --build build --config RelWithDebInfo
+        ls build
+
     - name: Generate build files 
       run: cmake -B ${{github.workspace}}/build
 
