--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,8 +26,10 @@ jobs:
         cd  ~/cache/${{ runner.os }}
         git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
         cd Cinder
-        cmake -B build
+        cmake -B build -DCMAKE_CXX_STANDARD=17 -DCMAKE_CXX_STANDARD_REQUIRED=ON
+        cmake --build build --config Release
         cmake --build build --config RelWithDebInfo
+        cmake --build build --config Debug
         ls build
 
     - name: Generate build files 
