--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,11 +26,9 @@ jobs:
         cd  ~/cache/${{ runner.os }}
         git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
         cd Cinder
-        CURRENT_DIR=$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )
-        CINDER_XCODEPROJ="${CURRENT_DIR}/cinder.xcodeproj"
-        xcrun xcodebuild -project ${CINDER_XCODEPROJ} -target cinder -configuration Release $@
-        xcrun xcodebuild -project ${CINDER_XCODEPROJ} -target cinder -configuration RelWithDebInfo $@
-        xcrun xcodebuild -project ${CINDER_XCODEPROJ} -target cinder -configuration Debug $@
+        xcrun xcodebuild -project proj/xcode/cinder.xcodeproj -target cinder -configuration Release $@
+        xcrun xcodebuild -project proj/xcode/cinder.xcodeproj -target cinder -configuration RelWithDebInfo $@
+        xcrun xcodebuild -project proj/xcode/cinder.xcodeproj -target cinder -configuration Debug $@
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
