--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,8 +26,10 @@ jobs:
         cd  ~/cache/${{ runner.os }}
         git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
         cd Cinder
-        cmake -B build
-        cmake --build build
+        cd proj/xcode
+        ./fullbuild.sh
+        #cmake -B build -
+        #cmake --build build
         #./proj/xcode/osx-build-xcpretty.sh
         #xcrun xcodebuild -project proj/xcode/cinder.xcodeproj -target cinder -configuration Release $@
         #xcrun xcodebuild -project proj/xcode/cinder.xcodeproj -target cinder -configuration RelWithDebInfo $@
