--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,7 +29,9 @@ jobs:
         cd  ~/cache/${{ runner.os }}
         git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
         cd Cinder
-        msbuild proj/vc2019/cinder.sln
+        cat proj/vc2019/cinder.sln
+        cd proj/vc2019
+        msbuild cinder.sln
         ls build
 
     - name: Generate build files 
