--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,14 +17,14 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/cache/${{ runner.os }}/Cinder
-        key: ${{ runner.os }}-cinder-v0.9.2
+        key: ${{ runner.os }}-cinder-latest
 
     - name: Clone & Build Cinder
       #if: steps.cache-cinder.outputs.cache-hit != 'true'
       run: |
         mkdir -p ~/cache/${{ runner.os }}
         cd  ~/cache/${{ runner.os }}
-        git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
+        git clone --recursive --depth 1 https://github.com/cinder/Cinder.git
         cd Cinder
         cd proj/xcode
         ./fullbuild.sh
