--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,21 +20,16 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/cache/${{ runner.os }}/Cinder
-        key: ${{ runner.os }}-cinder-v0.9.2
+        key: ${{ runner.os }}-cinder-latest
 
     - name: Clone & Build Cinder
       #if: steps.cache-cinder.outputs.cache-hit != 'true'
       run: |
         mkdir ~/cache/${{ runner.os }} -ea 0
         cd  ~/cache/${{ runner.os }}
-        git clone --recursive --depth 1 --branch v0.9.2 https://github.com/cinder/Cinder.git
+        git clone --recursive --depth 1 https://github.com/cinder/Cinder.git
         cd Cinder
-        pwd
-        ls proj
-        ls proj/vc2019
-        cat proj/vc2019/cinder.sln
-        cd proj/vc2019
-        msbuild cinder.sln
+        msbuild proj/vc2019/cinder.sln
         ls build
 
     - name: Generate build files 
