Enable caching, tweak linux

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,7 +23,7 @@ jobs:
         key: ${{ runner.os }}-cinder-latest
 
     - name: Clone & Build Cinder
-      #if: steps.cache-cinder.outputs.cache-hit != 'true'
+      if: steps.cache-cinder.outputs.cache-hit != 'true'
       run: |
         mkdir ~/cache/${{ runner.os }} -ea 0
         cd  ~/cache/${{ runner.os }}
