--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,7 +32,7 @@ jobs:
         msbuild proj/vc2019/cinder.sln
 
     - name: Generate build files 
-      run: cmake -B ${{github.workspace}}/build
+      run: cmake -B ${{github.workspace}}/build -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
 
     - name: Build project
       # The --config option is only used on multi-config generators
