--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -61,11 +61,17 @@ jobs:
         cmake --build build
         cmake -B build -DCMAKE_RELEASE_TYPE=Debug
         cmake --build build
-        ls build
+
+    - name: Debugging
+      run: |
+        cd ~/cache/${{ runner.os }}/Cinder
+        ls
+        tree build/lib
+        tree lib
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/${{ matrix.build-type }}
 
     - name: Build project
       run: cmake --build ${{ github.workspace }}/build
