--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,32 +46,31 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/cache/${{ runner.os }}/Cinder
-        key: ${{ runner.os }}-cinder-latest-dirty
+        key: ${{ runner.os }}-cinder-latest
 
     - name: Clone & Build Cinder
-      if: steps.cache-cinder.outputs.cache-hit != 'true'
+      #if: steps.cache-cinder.outputs.cache-hit != 'true'
       run: |
         mkdir -p ~/cache/${{ runner.os }}
         cd  ~/cache/${{ runner.os }}
         git clone --recursive --depth 1 https://github.com/cinder/Cinder.git
         cd Cinder
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
-        cmake --build build
+        #cmake -B build -DCMAKE_BUILD_TYPE=Release
+        #cmake --build build
         cmake -B build -DCMAKE_BUILD_TYPE=RelWithDebInfo
         cmake --build build
-        cmake -B build -DCMAKE_BUILD_TYPE=Debug
-        cmake --build build
+        #cmake -B build -DCMAKE_BUILD_TYPE=Debug
+        #cmake --build build
 
     - name: Debugging
       run: |
         cd ~/cache/${{ runner.os }}/Cinder
         ls
-        tree build/lib
         tree lib
 
     - name: Generate build files 
       # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/${{ matrix.build-type }}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/RelWithDebInfo #@@TODO
 
     - name: Build project
       run: cmake --build ${{ github.workspace }}/build
