--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -38,14 +38,14 @@ jobs:
         ls
         tree lib
 
-    - name: Generate build files 
-      # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
-
-    - name: Build project
-      run: cmake --build ${{ github.workspace }}/build
-
-    - name: Run tests
-      working-directory: ${{ github.workspace }}/build
-      # Run the tests
-      run: ctest -C --output-on-failure
+#    - name: Generate build files 
+#      # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
+#      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
+#
+#    - name: Build project
+#      run: cmake --build ${{ github.workspace }}/build
+#
+#    - name: Run tests
+#      working-directory: ${{ github.workspace }}/build
+#      # Run the tests
+#      run: ctest -C --output-on-failure
