--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,7 +27,9 @@ jobs:
       run: |
         mkdir ~/cache/${{ runner.os }} -ea 0
         cd  ~/cache/${{ runner.os }}
-        rm -rf Cinder
+        #Easier than testing if the file exists. Prevents the rm command from erroring
+        mkdir Cinder -ea 0
+        rm Cinder
         git clone --recursive --depth 1 https://github.com/cinder/Cinder.git
         cd Cinder
         cmake -B build
@@ -39,14 +41,14 @@ jobs:
         ls
         tree lib
 
-    - name: Generate build files 
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
+    #- name: Generate build files 
+    #  run: cmake -B ${{github.workspace}}/build -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
 
-    - name: Build project
-      # The --config option is only used on multi-config generators
-      run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }}
+    #- name: Build project
+    #  # The --config option is only used on multi-config generators
+    #  run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }}
 
-    - name: Run tests
-      working-directory: ${{ github.workspace }}/build
-      # Run the tests, selecting the configuration
-      run: ctest -C ${{ matrix.build-type }} --output-on-failure
+    #- name: Run tests
+    #  working-directory: ${{ github.workspace }}/build
+    #  # Run the tests, selecting the configuration
+    #  run: ctest -C ${{ matrix.build-type }} --output-on-failure
