--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,7 +29,7 @@ jobs:
         cd  ~/cache/${{ runner.os }}
         #Easier than testing if the file exists. Prevents the rm command from erroring
         mkdir Cinder -ea 0
-        rm Cinder /Force
+        rm Cinder -Force
         git clone --recursive --depth 1 https://github.com/cinder/Cinder.git
         cd Cinder
         cmake -B build
