Cinder CMake testing

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -69,9 +69,13 @@ jobs:
         ls
         tree lib
 
-    #- name: Generate build files 
-    #  # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
-    #  run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/RelWithDebInfo #@@TODO
+    - name: Generate build files
+      # The -DCMAKE_BUILD_TYPE variable only matters to single-config generators
+      run: >
+        cmake -B ${{github.workspace}}/build
+        -DCMAKE_BUILD_TYPE=${{ matrix.build-type }}
+        -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
+        -Dcinder_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/${{ matrix.build-type }}
 
     #- name: Build project
     #  run: cmake --build ${{ github.workspace }}/build
