--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -41,8 +41,11 @@ jobs:
         ls
         tree lib
 
-    #- name: Generate build files 
-    #  run: cmake -B ${{github.workspace}}/build -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
+    - name: Generate build files
+      run: >
+        cmake -B ${{github.workspace}}/build
+        -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE
+        -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
 
     #- name: Build project
     #  # The --config option is only used on multi-config generators
