--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -77,10 +77,10 @@ jobs:
         -DCINDER_PATH=~/cache/${{ runner.os }}/Cinder
         -Dcinder_PATH=~/cache/${{ runner.os }}/Cinder/lib/linux/x86_64/ogl/${{ matrix.build-type }}
 
-    #- name: Build project
-    #  run: cmake --build ${{ github.workspace }}/build
+    - name: Build project
+      run: cmake --build ${{ github.workspace }}/build
 
-    #- name: Run tests
-    #  working-directory: ${{ github.workspace }}/build
-    #  # Run the tests
-    #  run: ctest -C --output-on-failure
+    - name: Run tests
+      working-directory: ${{ github.workspace }}/build
+      # Run the tests
+      run: ctest -C --output-on-failure
