--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,7 +39,9 @@ jobs:
       run: |
         cd ~/cache/${{ runner.os }}/Cinder
         ls
-        tree lib
+        ls build
+        tree build /F
+        tree lib /F
 
     - name: Generate build files
       run: >
@@ -49,7 +51,7 @@ jobs:
 
     - name: Build project
       # The --config option is only used on multi-config generators
-      run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }} -- -property:RuntimeLibrary=MD
+      run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }} -- -property:WarningLevel=2
 
     - name: Run tests
       working-directory: ${{ github.workspace }}/build
