--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Build project
       # The --config option is only used on multi-config generators
-      run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }} -- -property:WarningLevel=2
+      run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build-type }} -- -ver
 
     - name: Run tests
       working-directory: ${{ github.workspace }}/build
